--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,18 +14,11 @@
             <div class="container-fluid">
                 <div class="content">
                     <div class="logo">
-                        <a href="#">R</a>
-                    </div>
-                    <div class="nav-btn">
-                        <a href="#"></a>
-                    </div>
+                        <a href="#home">R</a>
+                    </div>                    
                 </div>
             </div>
         </header>
-        <div id="nav">
-            <div class="content">
-            </div>
-        </div>
         <div id="home">
             <div class="bg"></div>
             <div class="container">
@@ -32,6 +26,9 @@
                     <div class="about">
                         <h1>I'm Ruslan.</h1>
                         <p>a web developer.</p>
+                    </div>
+                    <div class="arrow">
+                        <a class="arrow_a" href="#portfolio"><i class="fas fa-arrow-down"></i></a>
                     </div>
                 </div>
             </div>
@@ -41,24 +38,92 @@
                 <div class="content">
                     <h2>Portfolio</h2>
                     <div class="blocks row">
-                        <!--Waxom-->
                         <div class="block col-lg-4 col-md-6 col-xs-12">
-                        <div class="content">
-                            <div class="photo">
-                                <img src="img/bg_block1.jpg" alt="">
-                                <div class="overlay">
-                                    <div class="links">
-                                        <a href="#" class="link"></a>
-                                        <a href="#" class="lupa"></a>
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/waxom.jpg" alt="waxom">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Waxom/dist/"><i class="fas fa-external-link-alt"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Waxom/dist"><i class="fas fa-search"></i></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="title">
-                                <h4>Claritas Etiam Processus</h4>
-                                <p>Photography, Nature</p>
+                                <div class="title">
+                                    <h4>Waxom</h4>
+                                    <p>Templates</p>
+                                </div>
                             </div>
                         </div>
-                    </div>                       
+
+                        <div class="block col-lg-4 col-md-6 col-xs-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/hockey_school.jpg" alt="hockey">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/hockey/dist/"><i class="fas fa-external-link-alt"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/hockey/dist"><i class="fas fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <h4>Hockey school</h4>
+                                    <p>School</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block col-lg-4 col-md-6 col-xs-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/site2.jpg" alt="נווה-זמר | רעננה<">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Page/dist/"><i class="fas fa-external-link-alt"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Page/dist"><i class="fas fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <h4>נווה-זמר | רעננה</h4>
+                                    <p>לגור בעיר , להרגיש בכפר</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block col-lg-4 col-md-6 col-xs-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/almadigital.jpg" alt="almadigital">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Almadigital/"><i class="fas fa-external-link-alt"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Almadigital"><i class="fas fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <h4>Almadigital</h4>
+                                    <p>Web design & development</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block col-lg-4 col-md-6 col-xs-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/Veiks.jpg" alt="modaveiks">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Moda/dist/"><i class="fas fa-external-link-alt"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Moda/dist"><i class="fas fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <h4>Moda by Veiks</h4>
+                                    <p>Сlothes</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -66,7 +131,7 @@
         <div id="socials">
             <div class="container">
                 <div class="content">
-                	<h2>Contact me!</h2>
+                    <h2>Contact me!</h2>
                     <div class="socials">
                         <a class="kwork" href="https://kwork.ru/user/ruslan_nikolaev">Kwork</a>
                         <a href="https://github.com/ruslanmmr/ruslanmmr.github.io"><i class="fab fa-github"></i> Github</a>
@@ -78,7 +143,7 @@
         <div id="footer">
             <div class="container">
                 <div class="content">
-                	<p>2016-2018 © Belozertsev Ruslan | Images: <a href="https://pixabay.com/">Pixabay</a></p>
+                    <p>2016-2018 © Belozertsev Ruslan | Images: <a href="https://pixabay.com/">Pixabay</a></p>
                     <p class="madeby">Made with <span><i class="fas fa-heart"></i></span> by me.</p>
                 </div>
             </div>
