--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </header>
         <div id="home">
             <div class="bg"></div>
+             <div class="bg_mobile"></div>
             <div class="container">
                 <div class="content">
                     <div class="about">
