--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Ruslan Belozertsev</title>
-    <link rel="stylesheet" href="css/common.min.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body>
