--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
     </div>
     <!--styles-->
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common.min.css">
     <!--scripts-->
     <script src="js/scripts.min.js"></script>
 </body>
