--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 </div>
             </div>
         </div>
-        <style type="text/css">
+        <style>
         #cube-loader{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:100vh;width:100vw;position:fixed;z-index:1001;background:#4c4c4c;opacity:1;visibility:visible;-webkit-transition:.6s ease;-o-transition:.6s ease;transition:.6s ease}#cube-loader .caption{margin:0 auto}#cube-loader .cube-loader{width:73px;height:73px;margin:49px auto 0;position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg)}#cube-loader .cube-loader .cube{position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg);width:50%;height:50%;float:left;-webkit-transform:scale(1.1);-ms-transform:scale(1.1);transform:scale(1.1)}#cube-loader .cube-loader .cube:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-color:#fff;-webkit-animation:cube-loader 2.76s infinite linear both;animation:cube-loader 2.76s infinite linear both;-webkit-transform-origin:100% 100%;-ms-transform-origin:100% 100%;transform-origin:100% 100%}#cube-loader .cube-loader .loader-2{-webkit-transform:scale(1.1) rotateZ(90deg);-ms-transform:scale(1.1) rotate(90deg);transform:scale(1.1) rotateZ(90deg)}#cube-loader .cube-loader .loader-3{-webkit-transform:scale(1.1) rotateZ(180deg);-ms-transform:scale(1.1) rotate(180deg);transform:scale(1.1) rotateZ(180deg)}#cube-loader .cube-loader .loader-4{-webkit-transform:scale(1.1) rotateZ(270deg);-ms-transform:scale(1.1) rotate(270deg);transform:scale(1.1) rotateZ(270deg)}#cube-loader .cube-loader .loader-2:before{-webkit-animation-delay:.35s;animation-delay:.35s}#cube-loader .cube-loader .loader-3:before{-webkit-animation-delay:.69s;animation-delay:.69s}#cube-loader .cube-loader .loader-4:before{-webkit-animation-delay:1.04s;animation-delay:1.04s}.done{opacity:0!important;visibility:hidden!important}@-webkit-keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}@keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}
     </style>
-        <script async type="text/javascript">
+        <script>
     document.body.onload = function() {
         setTimeout(function() {
             var preloader = document.getElementById("cube-loader")
@@ -209,7 +209,7 @@
                     <div class="links">
                         <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io"><i class="fab fa-github-square"></i></a>
                         <a target="_blank" href="https://www.facebook.com/ruslanbelozertsev1"><i class="fab fa-facebook-square"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/belozertcev_ruslan"><i class="fab fa-instagram"></i></i></a>
+                        <a target="_blank" href="https://www.instagram.com/belozertcev_ruslan"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
     <!--styles-->
     <link rel="stylesheet" href="css/common.css">
     <!--scripts-->
-    <script src="js/scripts.min.js"></script>
+    <script async src="js/scripts.min.js"></script>
 </body>
 
 </html>
