--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div id="wrapper" class="wrapper_active">
+    <div id="wrapper">
         <!--preload-->
         <div id="cube-loader">
             <div class="caption">
