--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container_fluid">
                 <div class="content">
                     <div class="blocks row">
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/waxom.jpg" alt="waxom">
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/hockey_school.jpg" alt="hockey">
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/site2.jpg" alt="נווה-זמר | רעננה<">
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/almadigital.jpg" alt="almadigital">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/Veiks.jpg" alt="modaveiks">
@@ -168,7 +168,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="block col-xl-3 col-lg-4 col-md-6 col-xs-12">
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="content">
                                 <div class="photo">
                                     <img src="img/ans.jpg" alt="ans">
