--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -79,8 +79,8 @@
                                     <img src="img/waxom.jpg" alt="waxom">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Waxom/dist/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Waxom/dist"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Waxom/dist/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Waxom/dist"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -98,8 +98,8 @@
                                     <img src="img/hockey_school.jpg" alt="hockey">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/hockey/dist/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/hockey/dist"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/hockey/dist/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/hockey/dist"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -117,8 +117,8 @@
                                     <img src="img/site2.jpg" alt="נווה-זמר | רעננה<">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Page/dist/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Page/dist"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Page/dist/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Page/dist"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -136,8 +136,8 @@
                                     <img src="img/almadigital.jpg" alt="almadigital">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Almadigital/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Almadigital"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Almadigital/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Almadigital"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -155,8 +155,8 @@
                                     <img src="img/Veiks.jpg" alt="modaveiks">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Moda/dist/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Moda/dist"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Moda/dist/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Moda/dist"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -174,8 +174,8 @@
                                     <img src="img/ans.jpg" alt="ans">
                                     <div class="overlay">
                                         <div class="links">
-                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/ANS/dist/"><i class="fas fa-external-link-alt"></i></a>
-                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/ANS/dist"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/ANS/dist/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/ANS/dist"><i class="fas fa-external-link-alt"></i></a>
                                         </div>
                                     </div>
                                 </div>
