--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <title>Ruslan Belozertsev</title>
+    <title>Ruslan Belozertsev | Web Developer</title>
+    <meta property="og:title" content=">Ruslan Belozertsev | Web Developer">
+<meta property="og:site_name" content="Web development">
+<meta property="og:url" content="https://ruslanmmr.github.io/">
+<meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer. ">
+<meta property="og:image" content="../favicons/favicon-16x16.png">
+
 </head>
 
 <body>
