--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
@@ -25,10 +26,10 @@
     <meta name="format-detection" content="telephone=no">
     <title>Ruslan Belozertsev | Web Developer</title>
     <meta property="og:title" content=">Ruslan Belozertsev | Web Developer">
-<meta property="og:site_name" content="Web development">
+<meta property="og:site_name" content="Ruslan Belozertsev">
 <meta property="og:url" content="https://ruslanmmr.github.io/">
 <meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer. ">
-<meta property="og:image" content="../favicons/favicon-16x16.png">
+<meta property="og:image" content="../img/DESC.jpg">
 
 </head>
 
