added metrika targets

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div id="particles-js" class="bg"></div>
         <header>
             <div class="content">
-                <a class="btn portf" href="">portfolio</a>
+                <a class="btn portf" onclick="yaCounter49809103.reachGoal('portfolio_btn'); return true;" href="">portfolio</a>
                 <a class="btn hm active" href="">home</a>
-                <a class="btn cntcts" href="">contacts</a>
+                <a class="btn cntcts" onclick="yaCounter49809103.reachGoal('contacts_btn'); return true;" href="">contacts</a>
             </div>
         </header>
         <div id="home">
@@ -237,11 +237,11 @@
             <div class="container_fluid">
                 <div class="content">
                     <p>I’m currently working as a Freelance and Front-End Developer at
-                        <a target="_blank" href="https://kwork.ru/user/ruslan_nikolaev">Kwork</a>.</p>
+                        <a target="_blank" onclick="yaCounter49809103.reachGoal('kwork'); return true;" href="https://kwork.ru/user/ruslan_nikolaev">Kwork</a>.</p>
                     <div class="links">
-                        <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io"><i class="fab fa-github-square"></i></a>
-                        <a target="_blank" href="https://www.facebook.com/ruslanbelozertsev1"><i class="fab fa-facebook-square"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/belozertcev_ruslan"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" onclick="yaCounter49809103.reachGoal('github'); return true;" href="https://github.com/ruslanmmr/ruslanmmr.github.io"><i class="fab fa-github-square"></i></a>
+                        <a target="_blank" onclick="yaCounter49809103.reachGoal('face'); return true;" href="https://www.facebook.com/ruslanbelozertsev1"><i class="fab fa-facebook-square"></i></a>
+                        <a target="_blank" onclick="yaCounter49809103.reachGoal('insta'); return true;" href="https://www.instagram.com/belozertcev_ruslan"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
