--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Hi! My name is Ruslan and I'm a web developer. Watch more on the site...">
+    <meta name="description" content="Hi! My name is Ruslan and I'm a web developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
@@ -25,36 +25,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <title>Ruslan Belozertsev | Web Developer</title>
-    <meta property="og:title" content=">Ruslan Belozertsev | Web Developer">
+    <meta property="og:title" content="Welcome! | Ruslan Belozertsev">
 <meta property="og:site_name" content="Ruslan Belozertsev">
 <meta property="og:url" content="https://ruslanmmr.github.io/">
-<meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer. ">
-<meta property="og:image" content="../img/DESC.jpg">
+<meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer.">
+<meta property="og:image" content="https://ruslanmmr.github.io/img/DESC.jpg">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter49809103 = new Ya.Metrika2({
-                    id:49809103,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true
-                });
-            } catch(e) { }
-        });
-
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/tag.js";
-
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks2");
+    (function(d,b,a){(b[a]=b[a]||[]).push(function(){try{b.yaCounter49809103=new Ya.Metrika2({id:49809103,clickmap:!0,trackLinks:!0,accurateTrackBounce:!0})}catch(f){}});var e=d.getElementsByTagName("script")[0],c=d.createElement("script");a=function(){e.parentNode.insertBefore(c,e)};c.type="text/javascript";c.async=!0;c.src="https://mc.yandex.ru/metrika/tag.js";"[object Opera]"==b.opera?d.addEventListener("DOMContentLoaded",a,!1):a()})(document,window,"yandex_metrika_callbacks2");
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/49809103" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
@@ -77,14 +55,7 @@
         #cube-loader{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:100%;width:100vw;position:fixed;z-index:1001;background:#4c4c4c;opacity:1;visibility:visible;-webkit-transition:.6s ease;-o-transition:.6s ease;transition:.6s ease}#cube-loader .caption{margin:0 auto}#cube-loader .cube-loader{width:73px;height:73px;margin:0 auto;position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg)}#cube-loader .cube-loader .cube{position:relative;-webkit-transform:rotateZ(45deg);-ms-transform:rotate(45deg);transform:rotateZ(45deg);width:50%;height:50%;float:left;-webkit-transform:scale(1.1);-ms-transform:scale(1.1);transform:scale(1.1)}#cube-loader .cube-loader .cube:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-color:#fff;-webkit-animation:cube-loader 2.76s infinite linear both;animation:cube-loader 2.76s infinite linear both;-webkit-transform-origin:100% 100%;-ms-transform-origin:100% 100%;transform-origin:100% 100%}#cube-loader .cube-loader .loader-2{-webkit-transform:scale(1.1) rotateZ(90deg);-ms-transform:scale(1.1) rotate(90deg);transform:scale(1.1) rotateZ(90deg)}#cube-loader .cube-loader .loader-3{-webkit-transform:scale(1.1) rotateZ(180deg);-ms-transform:scale(1.1) rotate(180deg);transform:scale(1.1) rotateZ(180deg)}#cube-loader .cube-loader .loader-4{-webkit-transform:scale(1.1) rotateZ(270deg);-ms-transform:scale(1.1) rotate(270deg);transform:scale(1.1) rotateZ(270deg)}#cube-loader .cube-loader .loader-2:before{-webkit-animation-delay:.35s;animation-delay:.35s}#cube-loader .cube-loader .loader-3:before{-webkit-animation-delay:.69s;animation-delay:.69s}#cube-loader .cube-loader .loader-4:before{-webkit-animation-delay:1.04s;animation-delay:1.04s}.done{opacity:0!important;visibility:hidden!important}@-webkit-keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}@keyframes cube-loader{0%,10%{-webkit-transform:perspective(136px) rotateX(-180deg);transform:perspective(136px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(136px) rotateX(0);transform:perspective(136px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(136px) rotateY(180deg);transform:perspective(136px) rotateY(180deg);opacity:0}}
         </style>
         <script>
-        document.body.onload = function() {
-            setTimeout(function() {
-                var preloader = document.getElementById("cube-loader")
-                if (!preloader.classList.contains("done")) {
-                    preloader.classList.add("done");
-                }
-            }, 1450);
-        }
+        document.body.onload=function(){setTimeout(function(){var a=document.getElementById("cube-loader");a.classList.contains("done")||a.classList.add("done")},1450)};
         </script>
         <div id="particles-js" class="bg"></div>
         <header>
