--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <title>Ruslan Belozertsev | Web Developer</title>
-    <meta property="og:title" content="Welcome! | Ruslan Belozertsev">
+    <meta property="og:title" content="Watch more... | Ruslan Belozertsev">
 <meta property="og:site_name" content="Ruslan Belozertsev">
 <meta property="og:url" content="https://ruslanmmr.github.io/">
 <meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer.">
