--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <title>Ruslan Belozertsev | Web Developer</title>
     <meta property="og:title" content="Watch more... | Ruslan Belozertsev">
 <meta property="og:site_name" content="Ruslan Belozertsev">
+<meta name="google-site-verification" content="tqrJchIM1PfmzEYTGk_kndRsIHLsLtTVt6y6ydIFVg4" />
 <meta property="og:url" content="https://ruslanmmr.github.io/">
 <meta property="og:description" content="Hi! My name is Ruslan and I'm a web developer.">
 <meta property="og:image" content="https://ruslanmmr.github.io/img/DESC.jpg">
