--- a/portfolio/Moda/app/index.html
+++ b/portfolio/Moda/app/index.html
@@ -11,6 +11,9 @@
 <body>
     <div id="wrap">
         <div id="home">
+            <!--Видео фон-->
+            <div class="bg_video"></div>
+
             <div class="container">
                 <div class="content">
                     <header>
