--- a/portfolio/Cargo/app/index.html
+++ b/portfolio/Cargo/app/index.html
@@ -13,8 +13,6 @@
 <body>
 
 <div id="wrapper">
-	<div class="bg">
-	</div>
 	<header>
 		<div class="container">
 			<a class="logo" href="#"></a>
@@ -26,6 +24,21 @@
 			<a class="btn" href="#">Личный кабинет</a>
 		</div>
 	</header>
+	<div id="home">
+		<div class="container">
+			  <div class="content">
+			  	<h1>Cargo-Boom</h1>
+			  <p>Займемся вашим заказом<br>уже сегодня</p>
+			  <a class="btn" href="#">Сделать заказ</a>
+			  </div>
+			  <div class="home_bottom">
+			  	 <div class="number">
+			  	 	<div class="icon"></div>
+			  	 	<a class="num" href="tel:+88005052785">8 800 505 27-85</a>
+			  	 </div>
+			  </div>
+		</div>
+	</div>
 </div>
 
 	<!--Sripts-->
