--- a/index.html
+++ b/index.html
@@ -193,6 +193,25 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="block col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
+                            <div class="content">
+                                <div class="photo">
+                                    <img src="img/cargo.jpg" alt="cargo">
+                                    <div class="overlay">
+                                        <div class="links">
+                                            <a target="_blank" href="https://ruslanmmr.github.io/portfolio/Cargo/app/"><i class="fas fa-search"></i></a>
+                                            <a target="_blank" href="https://github.com/ruslanmmr/ruslanmmr.github.io/tree/master/portfolio/Cargo/app"><i class="fas fa-external-link-alt"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="title">
+                                    <div>
+                                        <h4>CargoBoom</h4>
+                                        <p>Грузоперевозки</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="footer">
