--- a/portfolio/Shop/app/index.html
+++ b/portfolio/Shop/app/index.html
@@ -14,12 +14,11 @@
 
 <body>
     <div id="wrapper">
-        <div class="bg"></div>
         <div id="header">
             <div class="line"></div>
             <div class="container">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+                    <a href="index.html"></a>
                 </div>
                 <div class="content">
                     <div class="contacts">
@@ -56,6 +55,31 @@
                         <a href="#" class="btn"><span></span>Заказать звонок</a>
                     </div>
                 </div>
+                <div class="nav-btn">
+                            <a href="#"><span></span></a>
+                </div>
+            </div>
+        </div>
+        <div id="mobile_nav">
+            <div class="container">
+                <div class="content_nav">
+                    <ul>
+                        <li><a class="home" href="index.html">Главная</a></li>
+                        <li><a href="#">О компании</a></li>
+                        <li><a href="catalog.html">Каталог</a></li>
+                        <li><a href="#">Услуги</a></li>
+                        <li><a href="#">Информация</a></li>
+                        <li><a href="#">Диллерам</a></li>
+                        <li><a href="#">Акции</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                    <form action="search.php">
+                        <div class="search">
+                            <input type="search" placeholder="Поиск по каталогу" name="" required>
+                            <input type="submit" value="">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
         <div id="nav">
@@ -90,7 +114,7 @@
         <div id="page_content">
             <div class="container">
                 <div class="content row">
-                    <div class="sidebar col-3">
+                    <div class="sidebar col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12">
                         <div class="sidebar_content">
                             <div class="tab tab1">
                                 <div class="tab_name">
@@ -267,10 +291,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="catalog col-9">
+                    <div class="catalog col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12">
                         <div class="catalog_content">
                             <div class="banner">
-                                <a href="#"></a>
+                                <a href="#"><img src="img/banner.jpg" alt=""></a>
                             </div>
                             <div class="about">
                                 <div class="about_content">
@@ -696,7 +720,7 @@
             <div class="line"></div>
             <div class="container">
                 <div class="content row">
-                    <div class="block1 col-3">
+                    <div class="block1 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
                         <div class="numbers">
                             <div class="numbers_content">
                                 <div class="txt">
@@ -715,7 +739,7 @@
                             <p>Пн-Вс 09:00―22:00</p>
                         </div>
                     </div>
-                    <div class="block2 col-3">
+                    <div class="block2 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
                         <p>Generator-magazin.ru</p>
                         <ul>
                             <li><a href="#">О компании</a></li>
@@ -726,7 +750,7 @@
                             <li><a href="#">Диллерам</a></li>
                         </ul>
                     </div>
-                    <div class="block3 col-3">
+                    <div class="block3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
                         <p>Мы предлагаем</p>
                         <ul>
                             <li><a href="#">Каталог</a></li>
@@ -735,7 +759,7 @@
                             <li><a href="#">Карта сайта</a></li>
                         </ul>
                     </div>
-                    <div class="block4 col-3">
+                    <div class="block4 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
                         <p>Покупателям</p>
                         <ul>
                             <li><a href="#">Акции</a></li>
@@ -746,16 +770,16 @@
                             <li><a href="#">Конфедициальность</a></li>
                         </ul>
                     </div>
-                    <div class="copy col-3">
+                    <div class="copy col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
                         <p>© 2017 generator-magazin.ru</p>
                     </div>
-                    <div class="info col-9">
+                    <div class="info col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
                         <p><span>Юридический адрес:</span> ООО «Вершина», 119530, город Москва, Очаковское шоссе, дом 28 стр 2, эт 3 пом III комната 8 офис 15</p>
                         <p><span>Департамент по работе с клиентами:</span> 119606, г. Москва, проспект Вернадского, 84к2, офис 1801</p>
                         <p><span>ИНН / КПП:</span> 9729145787 / 772901001, ОГРН: 117 774 698 1961</p>
                     </div>
                     <div class="line_footer"></div>
-                    <div class="socials col-3">
+                    <div class="socials col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
                         <p>Мы в соцсетях</p>
                         <div class="social_links">
                             <a class="link1" href="#"></a>
@@ -766,28 +790,28 @@
                             <a class="link6" href="#"></a>
                         </div>
                     </div>
-                    <div class="pay col-9">
+                    <div class="pay col-xl-9 col-lg-9 col-md-9 col-sm-12">
                         <div class="top">
                             <p>Принимаем к оплате</p>
                             <div class="links">
-                                <a class="link1" href="#"></a>
-                                <a class="link2" href="#"></a>
-                                <a class="link3" href="#"></a>
-                                <a class="link4" href="#"></a>
-                                <a class="link5" href="#"></a>
-                                <a class="link6" href="#"></a>
-                                <a class="link7" href="#"></a>
-                                <a class="link8" href="#"></a>
+                                <a class="link link1" href="#"></a>
+                                <a class="link link2" href="#"></a>
+                                <a class="link link3" href="#"></a>
+                                <a class="link link4" href="#"></a>
+                                <a class="link link5" href="#"></a>
+                                <a class="link link6" href="#"></a>
+                                <a class="link link7" href="#"></a>
+                                <a class="link link8" href="#"></a>
                             </div>
                         </div>
                         <div class="bottom">
                             <p>Способы доставки</p>
                             <div class="links">
-                                <a class="link1" href="#"></a>
-                                <a class="link2" href="#"></a>
-                                <a class="link3" href="#"></a>
-                                <a class="link4" href="#"></a>
-                                <a class="link5" href="#"></a>
+                                <a class="link link1" href="#"></a>
+                                <a class="link link2" href="#"></a>
+                                <a class="link link3" href="#"></a>
+                                <a class="link link4" href="#"></a>
+                                <a class="link link5" href="#"></a>
                             </div>
                         </div>
                     </div>
