--- a/portfolio/Shop/app/catalog.html
+++ b/portfolio/Shop/app/catalog.html
@@ -806,7 +806,7 @@
                             <div class="seo">
                                 <div class="seo_content">
                                     <img src="img/seo_img.jpg" alt="seo">
-                                    <p>Изельгенераторные установки (ДГУ) — это агрегаты с большим запасом прочности, долговечные и надежные. Несмотря на достаточно высокую стоимость в сравнении с бензиновыми аналогами, дизельгенераторы более востребованы, поскольку намного экономичнее в эксплуатации и имеют высокий КПД. В нашем магазине вы найдете модели от недорогих 
+                                    <p>Дизельгенераторные установки (ДГУ) — это агрегаты с большим запасом прочности, долговечные и надежные. Несмотря на достаточно высокую стоимость в сравнении с бензиновыми аналогами, дизельгенераторы более востребованы, поскольку намного экономичнее в эксплуатации и имеют высокий КПД. В нашем магазине вы найдете модели от недорогих 
                                        до сверхмощных промышленных. Они различаются по назначению, конструктивному исполнению, виду вырабатываемого электротока.</p>
                                 </div>
                             </div>
